# arbitrage_bot

./: .gitignore  Cargo.toml  LICENSE  results.csv
.cargo/: config.toml
crates/kalshi-rs/: .gitignore  CONTRIBUTING.md  Cargo.toml  Cargo.toml.orig  LICENSE  QUICKSTART.md  README.md  SECURITY.md  SUPPORTED_ENDPOINTS.md
crates/kalshi-rs/src/: README.MD  client.rs  errors.rs  helpers.rs  lib.rs  main.rs  ws_client.rs
crates/kalshi-rs/src/api_keys/: endpoints.rs  models.rs
crates/kalshi-rs/src/auth/: auth_loader.rs  mod.rs  models.rs
crates/kalshi-rs/src/communications/: endpoints.rs  models.rs
crates/kalshi-rs/src/events/: endpoints.rs  models.rs
crates/kalshi-rs/src/exchange/: endpoints.rs  models.rs
crates/kalshi-rs/src/markets/: endpoints.rs  models.rs
crates/kalshi-rs/src/milestones/: endpoints.rs  models.rs
crates/kalshi-rs/src/multivariate_collections/: endpoints.rs  models.rs
crates/kalshi-rs/src/portfolio/: endpoints.rs  models.rs
crates/kalshi-rs/src/series/: endpoints.rs  models.rs
crates/kalshi-rs/src/structured_targets/: endpoints.rs  models.rs
crates/kalshi-rs/src/websocket/: endpoints.rs  models.rs
crates/kalshi-rs/tests/: README.MD  lib.rs
crates/kalshi-rs/tests/api_keys_test/: endpoints_test.rs  models_test.rs
crates/kalshi-rs/tests/common/: mod.rs
src/: coinbase_ws.rs  config.rs  main.rs  market_manager.rs  report.rs  types.rs
src/engine/: decision.rs  mod.rs  signal.rs  task.rs
src/exec/: http.rs  mod.rs  paper.rs  task.rs
src/state/: book.rs  flow.rs  mod.rs  orders.rs  position.rs  ticker.rs
src/ws/: task.rs
(+20 files in other folders)
